<resources>
    <string name="app_name">My Lost &amp; Found Application</string>
    <string name="create_new_advert">Create New Advert</string>
    <string name="show_all_lost_found_items"><![CDATA[Show All Lost & Found Items]]></string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="postType">Post Type:</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="showMap">Show on Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="placesAPI">AIzaSyArKsiPLKIl66wWUswQYwlt2GbwQn0qQ9s</string>
</resources>