<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/createNew2"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:text="@string/create_new_advert"
        app:layout_constraintBottom_toTopOf="@id/showAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/showMap"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/showMap"
        app:layout_constraintBottom_toTopOf="@id/showAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNew2"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/showAll"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="120dp"
        android:text="@string/show_all_lost_found_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNew2"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>